Multiple prefix keys for tmux - makes it easier to switch windows

--- a/etc/dot/tmux.conf
+++ b/etc/dot/tmux.conf
@@ -7,6 +7,7 @@ set -g base-index 1
 # C-b is not acceptable -- Vim uses it
 # set-option -g prefix C-a
 # bind-key C-a last-window
+set-option -g prefix2 §
 
 # Enable Vim
 set-window-option -g xterm-keys on # for vim
