Scrolling for TMUX!!!

--- a/etc/dot/tmux.conf
+++ b/etc/dot/tmux.conf
@@ -52,4 +52,4 @@ set -g visual-activity on
 set-window-option -g window-status-current-bg red
 
 # Make mouse scrolling work
-# set -g mode-mouse on
+set -g mouse on
