--- a/etc/dot/tmux.conf
+++ b/etc/dot/tmux.conf
@@ -4,6 +4,9 @@ set -g default-terminal "xterm"
 # 0 is too far from ` ;)
 set -g base-index 1
 
+set -g set-titles on
+set -g set-titles-string '#h   #S | #I #W'
+
 # C-b is not acceptable -- Vim uses it
 # set-option -g prefix C-a
 # bind-key C-a last-window
