Make 'title' work in oh-my-zsh

--- a/etc/dot/tmux.conf
+++ b/etc/dot/tmux.conf
@@ -1,5 +1,5 @@
 set-option -g default-command "reattach-to-user-namespace -l $SHELL"
-set -g default-terminal "xterm"
+set -g default-terminal "screen-256color"
 
 # 0 is too far from ` ;)
 set -g base-index 1
