tmux with unicode support
Took me a while to notice that!

Still doesn't fix the prompt auto-completion issue, but at least
it's a step in the right direction.

--- a/etc/dot/tmux.conf
+++ b/etc/dot/tmux.conf
@@ -7,6 +7,8 @@ set -g base-index 1
 set -g set-titles on
 set -g set-titles-string '#h   #S | #I #W'
 
+bind r source-file ~/.tmux.conf
+
 # C-b is not acceptable -- Vim uses it
 # set-option -g prefix C-a
 # bind-key C-a last-window
