--- a/etc/dot/tmux.conf
+++ b/etc/dot/tmux.conf
@@ -1,5 +1,6 @@
 set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 set -g default-terminal "screen-256color"
+set -g terminal-overrides "screen.xterm-new"
 
 # 0 is too far from ` ;)
 set -g base-index 1
