fix copy mode for latest tmux version

--- a/etc/dot/tmux.conf
+++ b/etc/dot/tmux.conf
@@ -1,4 +1,4 @@
-set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+# set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 set -g default-terminal "screen-256color"
 set -g terminal-overrides "screen.xterm-new"
 
@@ -18,12 +18,12 @@ set-option -g prefix2 §
 # Enable Vim
 set-window-option -g xterm-keys on # for vim
 set-window-option -g mode-keys vi
-bind-key -t vi-copy 'v' begin-selection
-# Copy things to system clipboard. If you are running mac osx you may need to install xclip. brew install homebrew/x11/xclip
-#bind-key -t vi-copy 'y' copy-pipe 'xclip -in -selection clipboard'
 
 # This one works better with mac
-bind-key -t vi-copy 'y' copy-pipe pbcopy
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -Tcopy-mode-vi Escape send -X cancel
+bind-key -Tcopy-mode-vi V send -X rectangle-toggle
 
 # Start numbering at 1
 set -g base-index 1
