--- a/etc/dot/tmux.conf
+++ b/etc/dot/tmux.conf
@@ -1,4 +1,4 @@
-# set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 set -g default-terminal "screen-256color"
 set -g terminal-overrides "screen.xterm-new"
 
