--- a/etc/dot/tmux.conf
+++ b/etc/dot/tmux.conf
@@ -55,7 +55,7 @@ set -g visual-activity on
 #set -g status-right "#[fg=yellow]#(uptime | cut -d ',' -f 2-)"
 
 # Highlight active window
-set-window-option -g window-status-current-bg red
+set-window-option -g window-status-current-style bg=red
 
 # Make mouse scrolling work
 set -g mouse on
