--- a/etc/dot/tmux.conf
+++ b/etc/dot/tmux.conf
@@ -1,6 +1,8 @@
 set-option -g default-command "reattach-to-user-namespace -l $SHELL"
-set -g default-terminal "screen-256color"
+set -g default-terminal 'screen-256color'
 set -g terminal-overrides "screen.xterm-new"
+set -ga terminal-overrides ',*256col*:Tc'
+set-option -g history-limit 5000
 
 # 0 is too far from ` ;)
 set -g base-index 1
